Refactor TsManager